--- a/index.html
+++ b/index.html
@@ -1,2 +1,22 @@
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>StacyAnnJ @ GitHub.io</title>
+  <meta name="description" content="StacyAnnJ @ GitHub.io">
+  <meta name="stacyannj" content="...">
+
+  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
+</head>
+
+<body>
+  <script src="js/scripts.js"></script>
+</body>
+</html>
+
 <h1>Stacy's signed up for the <a href="https://learnvanillajs.com/">Vanilla JS Academy</a>. </h1>
 
