--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Your page title here :)</title>
+  <title>stacyannj's projects</title>
   <meta name="description" content="">
   <meta name="Stacy Elliott" content="">
 
@@ -37,8 +37,8 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
-        <h4>Basic Page</h4>
-        <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
+        <h4>Stacy's enrolled in the May 2020 <a href="https://courses.gomakethings.com/academy/2020-05/#play">Vanilla JS Academy</a>.</h4>
+        <p>And she's collecting her projects and helpful resources here.</p>
       </div>
     </div>
   </div>
