--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+  <link rel="manifest" href="images/site.webmanifest">
 
 </head>
 <body>
@@ -38,7 +38,7 @@
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
         <h4>Stacy's enrolled in the May 2020 <a href="https://courses.gomakethings.com/academy/2020-05/#play">Vanilla JS Academy</a>.</h4>
-        <p>And she's collecting her projects and helpful resources here.</p>
+        <p>And she's collecting her projects and helpful resources here. Stay tuned!</p>
       </div>
     </div>
   </div>
